--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
-    "@frsource/cypress-plugin-visual-regression-diff": "^1.4.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@web/dev-server": "^0.4.6",
     "@web/rollup-plugin-html": "^2.0.0",
-    "cypress": "^13.15.0",
+    "cypress": "^14.0.0",
+    "cypress-visual-regression": "^5.2.2",
     "del": "^3.0.0",
     "pixelmatch": "^4.0.2",
     "rollup": "^2.79.1",
