--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:sauce": "polymer test --module-resolution=node --npm -s 'windows 10/microsoftedge@17' -s 'macos 10.13/safari@11'",
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000",
     "cy:open": "cypress open --config-file cypress.config.base.js",
+    "cy:base": "cypress run --browser chrome --config-file cypress.config.base.js",
     "cy:run": "cypress run --browser chrome",
     "cy:updatesnapshots": "cypress open --config-file cypress.config.base.js"
   },
