--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "del": "^3.0.0",
     "pixelmatch": "^4.0.2",
     "rollup": "^2.79.1",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-copy": "3.5",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-minify-template-literals": "^1.1.7",
     "rollup-plugin-sourcemaps": "^0.6.3",
