--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@web/dev-server": "^0.4.6",
+    "@web/dev-server-esbuild": "^1.0.4",
     "@web/rollup-plugin-html": "^2.0.0",
     "cypress": "^14.0.0",
     "cypress-visual-regression": "^5.2.2",
@@ -64,6 +66,8 @@
     "rollup-plugin-minify-template-literals": "^1.1.7",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-summary": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   }
 }
