wip service component, switch to vite for dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "useDefineForClassFields": false,
     "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
