--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "BSD-3-Clause",
   "repository": "https://github.com/edugis-org/edugis-viewer",
   "scripts": {
-    "start": "web-dev-server --node-resolve --open --watch",
+    "startold": "web-dev-server --node-resolve --open --watch",
+    "start": "vite --port 8080 --host",
     "build": "rollup -c",
     "test": "npm run test:unit && npm run test:integration",
     "test:integration": "mocha test/integration --timeout=10000",
@@ -68,6 +69,7 @@
     "rollup-plugin-summary": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
