--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "maplibre-gl": "^3.3.1",
     "marked": "^4.2.4",
     "papaparse": "^5.4.0",
+    "psl": "^1.15.0",
     "reselect": "^3.0.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
