--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@edugis/lineunion": "^0.3.2",
     "@edugis/mapbox-gl-draw": "^0.0.8",
     "@edugis/proj-convert": "^0.2.0",
+    "@maplibre/maplibre-gl-style-spec": "^19.3.2",
     "@material/mwc-base": "^0.25.1",
     "@material/mwc-button": "^0.25.1",
     "@material/slider": "^0.44.1",
     "@polymer/polymer": "^3.5.2",
+    "@rollup/plugin-commonjs": "^29.0.0",
     "@simonwep/pickr": "^1.8.2",
     "@turf/turf": "^6.5.0",
     "@webcomponents/webcomponentsjs": "^2.7.0",
